--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,13 +1,39 @@
+@import "_variables.scss";
+@import "_mixins.scss";
+
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
 
+body {
+  background-color: getColor("DarkBackground");
+  color: getColor("LightTextDefault");
+}
+
 a {
+  color: inherit;
   text-decoration: none;
 }
 
 ul {
   list-style: none;
+}
+
+.container {
+  margin: 0 auto;
+  padding: 0 16px;
+
+  width: 375px;
+
+  @include tablet {
+    padding: 0 48px;
+    width: 768px;
+  }
+
+  @include desktop {
+    padding: 0 80px;
+    width: 1440px;
+  }
 }
