--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -14,7 +14,7 @@
   background-color: getColor("BlackColorTop");
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 
-  & .header-container {
+  &__container {
     padding: 15px 80px;
     display: flex;
     align-items: center;
