--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,6 @@
 $colors: (
   "LightTextDefault": #DBDCDE,
-  "LightTextHover": #F7C672,
+  "LightTextHover": #ffd895,
   "LightTextActive": #E59F2E,
   "BlackColorTop": #1F2428,
   "DarkBackground": #242323,
