--- a/src/components/AchievementsPage/AchievementsPage.scss
+++ b/src/components/AchievementsPage/AchievementsPage.scss
@@ -1,7 +1,7 @@
 @import "./../../styles/_variables.scss";
 @import "./../../styles/_mixins.scss";
 
-.armory-page {
+.achievements-page {
   height: 100%;
 
   &__container.container {
@@ -14,7 +14,7 @@
   }
 
   &__first-line {
-    font-size: 100px;
+    font-size: 75px;
     font-weight: 500;
     text-shadow: 2px 2px 10px rgba(#000000, 1.0);
     cursor: default;
@@ -22,13 +22,6 @@
 
   &__second-line {
     font-size: 25px;
-    text-shadow: 2px 2px 10px rgba(0, 0, 0, 1);
-    cursor: default;
-  }
-
-  &__thrid-line {
-    font-size: 55px;
-    font-weight: 500;
     text-shadow: 2px 2px 10px rgba(0, 0, 0, 1);
     cursor: default;
   }
