--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,8 +1,25 @@
 @import "./../../styles/_variables.scss";
 @import "./../../styles/_mixins.scss";
 
-footer {
-  height: 100px;
+.footer {
   background-color: getColor("BlackColorBottom");
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+
+  &__container.container {
+    padding: 25px 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  & span {
+    font-size: 10px;
+    letter-spacing: 1px;
+    cursor: default;
+  }
+
+  & p {
+    font-size: 20px;
+    cursor: default;
+  }
 }
