--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -4,10 +4,7 @@
 %link-style {
   display: inline-block;
   padding: 15px 10px;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: normal;
-  letter-spacing: 1px;
+  font-size: 25px;
 }
 
 .header {
@@ -32,11 +29,11 @@
     gap: 20px;
 
     & .list__item {
-
       & .default-link {
         @extend %link-style;
         position: relative;
         transition: all 300ms linear;
+        cursor: default;  
 
         &::before {
           content: "";
@@ -64,6 +61,7 @@
         @extend %link-style;
         position: relative;
         color: getColor("LightTextActive");
+        cursor: default;  
 
         &::before {
           content: "";
