--- a/src/components/HomePage/HomePage.scss
+++ b/src/components/HomePage/HomePage.scss
@@ -2,11 +2,34 @@
 @import "./../../styles/_mixins.scss";
 
 .home-page {
-  &__container {
+  height: 100%;
+
+  &__container.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     padding: 80px 60px;
+    height: 100%;
   }
 
-  & h1 {
-    margin: 0 auto;
+  &__first-line {
+    font-size: 100px;
+    font-weight: 500;
+    text-shadow: 2px 2px 10px rgba(#000000, 1.0);
+    cursor: default;
+  }
+
+  &__second-line {
+    font-size: 25px;
+    text-shadow: 2px 2px 10px rgba(0, 0, 0, 1);
+    cursor: default;
+  }
+
+  &__thrid-line {
+    font-size: 55px;
+    font-weight: 500;
+    text-shadow: 2px 2px 10px rgba(0, 0, 0, 1);
+    cursor: default;
   }
 }
