--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -7,12 +7,15 @@
   margin: 0;
 }
 
-html, body {
+body {
   background-color: getColor("DarkBackground");
   color: getColor("LightTextDefault");
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 100vh;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: normal;
 
   & main {
     flex: 1;
