--- a/src/sass/globals.scss
+++ b/src/sass/globals.scss
@@ -1,5 +1,5 @@
-@import "_variables.scss";
-@import "_mixins.scss";
+@import "@/sass/_variables.scss";
+@import "@/sass/_mixins.scss";
 
 * {
   box-sizing: border-box;
