--- a/src/components/ArmoryPage/ArmoryPage.scss
+++ b/src/components/ArmoryPage/ArmoryPage.scss
@@ -1,5 +1,5 @@
-@import "./../../styles/_variables.scss";
-@import "./../../styles/_mixins.scss";
+@import "@/sass/_variables.scss";
+@import "@/sass/_mixins.scss";
 
 .armory-page {
   height: 100%;
