--- a/src/components/SeasonPage/SeasonPage.scss
+++ b/src/components/SeasonPage/SeasonPage.scss
@@ -3,6 +3,14 @@
 
 .season-page {
     height: 100%;
+
+    @include onlyMobile {
+      display: none;
+    }
+
+    @include onlyTablet {
+      display: none;
+    }
   
     &__container.container {
       display: flex;
