--- a/src/components/AchievementsPage/AchievementsPage.scss
+++ b/src/components/AchievementsPage/AchievementsPage.scss
@@ -4,6 +4,14 @@
 .achievements-page {
   height: 100%;
 
+  @include onlyMobile {
+    display: none;
+  }
+
+  @include onlyTablet {
+    display: none;
+  }
+
   &__container.container {
     display: flex;
     flex-direction: column;
