--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -5,6 +5,14 @@
   background-color: getColor("BlackColorBottom");
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 
+  @include onlyMobile {
+    display: none;
+  }
+
+  @include onlyTablet {
+    display: none;
+  }
+
   &__container.container {
     padding: 25px 80px;
     display: flex;
