--- a/src/components/MobileMenu/MobileMenu.scss
+++ b/src/components/MobileMenu/MobileMenu.scss
@@ -1,3 +1,22 @@
 @import "@/sass/_variables.scss";
 @import "@/sass/_mixins.scss";
 
+.mobile-menu {
+  position: fixed;
+  top: 70px;
+  left: 0;
+
+  padding: 30px 0px;
+
+  width: 100vw;
+  height: calc(100vh - 70px);
+
+  background-color: getColor(BlackColorTop);
+
+  z-index: 100;
+  overflow-y: auto;
+
+  @include tablet {
+    display: none;
+  }
+}
