--- a/src/components/NavMenu/NavMenu.scss
+++ b/src/components/NavMenu/NavMenu.scss
@@ -1,3 +1,137 @@
 @import "@/sass/_variables.scss";
 @import "@/sass/_mixins.scss";
 
+.nav-menu {
+  @include onlyMobile {
+    display: none;
+  }
+}
+
+.nav-menu-list {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+
+  width: 100%;
+
+  @include onlyMobile {
+    flex-direction: column;
+    justify-content: center;
+
+    margin-bottom: 50px;
+
+    z-index: 20;
+  }
+
+  & .list__item {
+    @include onlyMobile {
+      position: relative;
+      width: 244px;
+    }
+
+    & .default-link {
+      display: inline-block;
+      position: relative;
+      padding: 15px 10px;
+
+      font-size: 25px;
+      transition: all 300ms linear;
+      cursor: default;
+
+      @include onlyTablet {
+        font-size: 20px;
+      }
+
+      @include onlyMobile {
+        display: inline-block;
+        padding: 14px;
+
+        width: 100%;
+        height: 100%;
+
+        text-align: center;
+
+        border: 2px solid getColor(LightTextDefault);
+      }
+
+      &::before {
+        content: "";
+        position: absolute;
+
+        width: 0;
+        height: 2px;
+        top: 49px;
+        left: 0;
+
+        opacity: 0;
+        background-color: getColor(LightTextHover);
+        transition: all 400ms ease-in-out;
+
+        @include onlyTablet {
+          display: none;
+        }
+
+        @include onlyMobile {
+          display: none;
+        }
+      }
+
+      @include desktop {
+        &:hover {
+          color: getColor(LightTextHover);
+
+          &::before {
+            width: 100%;
+            opacity: 1;
+          }
+        }
+      }
+    }
+
+    & .active-link {
+      display: inline-block;
+      position: relative;
+      padding: 15px 10px;
+
+      font-size: 25px;
+      color: getColor(LightTextActive);
+      cursor: default;
+
+      @include onlyTablet {
+        font-size: 20px;
+      }
+
+      @include onlyMobile {
+        display: inline-block;
+        padding: 14px;
+
+        width: 100%;
+        height: 100%;
+
+        text-align: center;
+
+        border: 2px solid getColor(LightTextActive);
+      }
+
+      &::before {
+        content: "";
+        position: absolute;
+
+        width: 100%;
+        height: 2px;
+        top: 49px;
+        left: 0;
+
+        background-color: getColor(LightTextActive);
+
+        @include onlyTablet {
+          top: 43px;
+        }
+
+        @include onlyMobile {
+          display: none;
+        }
+      }
+    }
+  }
+}
