--- a/src/sass/globals.scss
+++ b/src/sass/globals.scss
@@ -8,8 +8,8 @@
 }
 
 body {
-  background-color: getColor("DarkBackground");
-  color: getColor("LightTextDefault");
+  background-color: getColor(DarkBackground);
+  color: getColor(LightTextDefault);
   display: flex;
   flex-direction: column;
   height: 100vh;
