--- a/src/components/HomePage/HomePage.scss
+++ b/src/components/HomePage/HomePage.scss
@@ -4,40 +4,67 @@
 .home-page {
   height: 100%;
 
-  @include onlyMobile {
-    display: none;
-  }
-
-  @include onlyTablet {
-    display: none;
-  }
-
   &__container.container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 80px 60px;
+    padding: 60px 80px;
     height: 100%;
+
+    @include onlyTablet {
+      padding: 15px 48px;
+    }
+
+    @include onlyMobile {
+      padding: 10px 16px;
+    }
   }
 
   &__first-line {
     font-size: 100px;
     font-weight: 500;
-    text-shadow: 2px 2px 10px rgba(#000000, 1.0);
+    text-align: center;
+    text-shadow: 2px 2px 10px rgba(black, 1.0);
     cursor: default;
+
+    @include onlyTablet {
+      font-size: 80px;
+    }
+
+    @include onlyMobile {
+      font-size: 50px;
+    }
   }
 
   &__second-line {
     font-size: 25px;
-    text-shadow: 2px 2px 10px rgba(0, 0, 0, 1);
+    text-align: center;
+    text-shadow: 2px 2px 10px rgba(black, 1.0);
     cursor: default;
+
+    @include onlyTablet {
+      font-size: 15px;
+    }
+
+    @include onlyMobile {
+      font-size: 15px;
+    }
   }
 
   &__thrid-line {
     font-size: 55px;
     font-weight: 500;
-    text-shadow: 2px 2px 10px rgba(0, 0, 0, 1);
+    text-align: center;
+    text-shadow: 2px 2px 10px rgba(black, 1.0);
     cursor: default;
+
+    @include onlyTablet {
+      font-size: 35px;
+    }
+
+    @include onlyMobile {
+      font-size: 25px;
+    }
   }
 }
