--- a/sass/globals.scss
+++ b/sass/globals.scss
@@ -11,6 +11,7 @@ body {
   background-color: getColor(DarkBackground);
   color: getColor(LightTextDefault);
   display: flex;
+  position: relative;
   flex-direction: column;
   height: 100vh;
   font-size: 16px;
@@ -21,7 +22,7 @@ body {
     flex: 1;
   }
 
-  & footer {
+  & footer, header {
     flex-shrink: 0;
   }
 }
