--- a/src/components/AchievementsPage/AchievementsPage.scss
+++ b/src/components/AchievementsPage/AchievementsPage.scss
@@ -4,51 +4,52 @@
 .achievements-page {
   height: 100%;
 
+  padding: 10px 0;
+
+  @include tablet {
+    padding: 15px 0;
+  }
+
+  @include desktop {
+    padding: 80px 0;
+  }
+
   &__container.container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 80px 60px;
     height: 100%;
-
-    @include onlyTablet {
-      padding: 15px 48px;
-    }
-
-    @include onlyMobile {
-      padding: 10px 16px;
-    }
   }
 
   &__first-line {
-    font-size: 75px;
+    font-size: 50px;
     font-weight: 500;
     text-align: center;
     text-shadow: 2px 2px 10px rgba(#000000, 1.0);
     cursor: default;
 
-    @include onlyTablet {
+    @include tablet {
       font-size: 80px;
     }
 
-    @include onlyMobile {
-      font-size: 50px;
+    @include desktop {
+      font-size: 75px;
     }
   }
 
   &__second-line {
-    font-size: 25px;
+    font-size: 15px;
     text-align: center;
     text-shadow: 2px 2px 10px rgba(0, 0, 0, 1);
     cursor: default;
 
-    @include onlyTablet {
+    @include tablet {
       font-size: 15px;
     }
 
-    @include onlyMobile {
-      font-size: 15px;
+    @include desktop {
+      font-size: 25px;
     }
   }
 }
