--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -5,19 +5,22 @@
   background-color: getColor("BlackColorBottom");
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 
+  padding: 10px 0;
+  width: 100%;
+  min-width: 375px;
+
+  @include tablet {
+    padding: 15px 0;
+  }
+
+  @include desktop {
+    padding: 25px 0;
+  }
+
   &__container.container {
-    padding: 25px 80px;
     display: flex;
     flex-direction: column;
     align-items: center;
-
-    @include onlyTablet {
-      padding: 15px 48px;
-    }
-
-    @include onlyMobile {
-      padding: 10px 16px;
-    }
   }
 
   & span {
