--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -4,23 +4,24 @@
 .header {
   background-color: getColor(BlackColorTop);
   box-shadow: 0 0 10px rgba(Black, 0.5);
-  position: fixed;
-  width: 100vw;
+
+  padding: 10px 0;
+  width: 100%;
+  min-width: 375px;
+
+  @include tablet {
+    padding: 15px 0;
+  }
+
+  @include desktop {
+    padding: 15px 0;
+  }
 
   &__container.container {
     position: relative;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 15px 80px;
-
-    @include onlyTablet {
-      padding: 15px 48px;
-    }
-
-    @include onlyMobile {
-      padding: 10px 16px;
-    }
   }
 
   &__icon {
