--- a/src/components/HomePage/HomePage.scss
+++ b/src/components/HomePage/HomePage.scss
@@ -3,68 +3,68 @@
 
 .home-page {
   height: 100%;
+  padding: 10px 0;
+
+  @include tablet {
+    padding: 15px 0;
+  }
+
+  @include desktop {
+    padding: 60px 0;
+  }
 
   &__container.container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 60px 80px;
     height: 100%;
-
-    @include onlyTablet {
-      padding: 15px 48px;
-    }
-
-    @include onlyMobile {
-      padding: 10px 16px;
-    }
   }
 
   &__first-line {
-    font-size: 100px;
+    font-size: 50px;
     font-weight: 500;
     text-align: center;
     text-shadow: 2px 2px 10px rgba(black, 1.0);
     cursor: default;
 
-    @include onlyTablet {
+    @include tablet {
       font-size: 80px;
     }
 
-    @include onlyMobile {
-      font-size: 50px;
+    @include desktop {
+      font-size: 100px;
     }
   }
 
   &__second-line {
-    font-size: 25px;
+    font-size: 15px;
     text-align: center;
     text-shadow: 2px 2px 10px rgba(black, 1.0);
     cursor: default;
 
-    @include onlyTablet {
+    @include tablet {
       font-size: 15px;
     }
 
-    @include onlyMobile {
-      font-size: 15px;
+    @include desktop {
+      font-size: 25px;
     }
   }
 
   &__thrid-line {
-    font-size: 55px;
+    font-size: 25px;
     font-weight: 500;
     text-align: center;
     text-shadow: 2px 2px 10px rgba(black, 1.0);
     cursor: default;
 
-    @include onlyTablet {
+    @include tablet {
       font-size: 35px;
     }
 
-    @include onlyMobile {
-      font-size: 25px;
+    @include desktop {
+      font-size: 55px;
     }
   }
 }
