--- a/src/components/SeasonPage/SeasonPage.scss
+++ b/src/components/SeasonPage/SeasonPage.scss
@@ -2,62 +2,70 @@
 @import "@/sass/_mixins.scss";
 
 .season-page {
+  height: 100%;
+
+  padding: 10px 0;
+
+  @include tablet {
+    padding: 15px 0;
+  }
+
+  @include desktop {
+    padding: 80px 0;
+  }
+  
+  &__container.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     height: 100%;
+  }
   
-    &__container.container {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      padding: 80px 60px;
-      height: 100%;
+  &__first-line {
+    font-size: 50px;
+    font-weight: 500;
+    text-align: center;
+    text-shadow: 2px 2px 10px rgba(#000000, 1.0);
+    cursor: default;
+
+    @include tablet {
+      font-size: 80px;
     }
   
-    &__first-line {
+    @include desktop {
       font-size: 100px;
-      font-weight: 500;
-      text-align: center;
-      text-shadow: 2px 2px 10px rgba(#000000, 1.0);
-      cursor: default;
-
-      @include onlyTablet {
-        font-size: 80px;
-      }
-  
-      @include onlyMobile {
-        font-size: 50px;
-      }
-    }
-  
-    &__second-line {
-      font-size: 25px;
-      text-align: center;
-      text-shadow: 2px 2px 10px rgba(0, 0, 0, 1);
-      cursor: default;
-
-      @include onlyTablet {
-        font-size: 15px;
-      }
-  
-      @include onlyMobile {
-        font-size: 15px;
-      }
-    }
-  
-    &__thrid-line {
-      font-size: 55px;
-      font-weight: 500;
-      text-align: center;
-      text-shadow: 2px 2px 10px rgba(0, 0, 0, 1);
-      cursor: default;
-
-      @include onlyTablet {
-        font-size: 35px;
-      }
-  
-      @include onlyMobile {
-        font-size: 25px;
-      }
     }
   }
   
+  &__second-line {
+    font-size: 15px;
+    text-align: center;
+    text-shadow: 2px 2px 10px rgba(0, 0, 0, 1);
+    cursor: default;
+
+    @include tablet {
+      font-size: 15px;
+    }
+  
+    @include desktop {
+      font-size: 25px;
+    }
+  }
+  
+  &__thrid-line {
+    font-size: 25px;
+    font-weight: 500;
+    text-align: center;
+    text-shadow: 2px 2px 10px rgba(0, 0, 0, 1);
+    cursor: default;
+
+    @include tablet {
+      font-size: 35px;
+    }
+  
+    @include desktop {
+      font-size: 55px;
+    }
+  }
+}
