--- a/src/components/MobileMenu/MobileMenu.scss
+++ b/src/components/MobileMenu/MobileMenu.scss
@@ -8,7 +8,8 @@
 
   padding: 30px 0px;
 
-  width: 100vw;
+  width: 100%;
+  min-width: 375px;
   height: calc(100vh - 70px);
 
   background-color: getColor(BlackColorTop);
