--- a/src/components/NavMenu/NavMenu.scss
+++ b/src/components/NavMenu/NavMenu.scss
@@ -10,69 +10,83 @@
 .nav-menu-list {
   display: flex;
   align-items: center;
-  gap: 20px;
+  flex-direction: column;
+  justify-content: center;
 
   width: 100%;
+  margin-bottom: 50px;
+  gap: 20px;
 
-  @include onlyMobile {
-    flex-direction: column;
-    justify-content: center;
+  z-index: 20;
 
-    margin-bottom: 50px;
-
-    z-index: 20;
+  @include tablet {
+    flex-direction: row;
+    justify-content: start;
+    margin-bottom: 0;
   }
 
   & .list__item {
-    @include onlyMobile {
-      position: relative;
-      width: 244px;
+    position: relative;
+    width: 244px;
+
+    @include tablet {
+      position: static;
+      width: fit-content;
     }
 
     & .default-link {
       display: inline-block;
       position: relative;
-      padding: 15px 10px;
+      padding: 14px;
+      width: 100%;
+      height: 100%;
 
       font-size: 25px;
+      text-align: center;
+      border: 4px solid getColor(LightTextDefault);
       transition: all 300ms linear;
       cursor: default;
 
-      @include onlyTablet {
+      @include tablet {
+        padding: 15px 10px;
+
+        width: fit-content;
+        height: fit-content;
+
+        border: none;
         font-size: 20px;
       }
 
-      @include onlyMobile {
-        display: inline-block;
-        padding: 14px;
+      @include desktop {
+        padding: 15px 10px;
 
-        width: 100%;
-        height: 100%;
+        width: fit-content;
+        height: fit-content;
 
-        text-align: center;
-
-        border: 4px solid getColor(LightTextDefault);
+        font-size: 25px;
+        border: none;
       }
 
       &::before {
-        content: "";
-        position: absolute;
+        display: none;
 
-        width: 0;
-        height: 2px;
-        top: 49px;
-        left: 0;
-
-        opacity: 0;
-        background-color: getColor(LightTextHover);
-        transition: all 400ms ease-in-out;
-
-        @include onlyTablet {
+        @include tablet {
           display: none;
         }
 
-        @include onlyMobile {
-          display: none;
+        @include desktop {
+          display: block;
+          content: "";
+          position: absolute;
+  
+          width: 0;
+          height: 2px;
+          top: 49px;
+          left: 0;
+  
+          opacity: 0;
+          background-color: getColor(LightTextHover);
+          transition: all 400ms ease-in-out;
         }
       }
 
@@ -91,45 +105,63 @@
     & .active-link {
       display: inline-block;
       position: relative;
-      padding: 15px 10px;
+      padding: 14px;
+      width: 100%;
+      height: 100%;
+
+      border: 4px solid getColor(LightTextActive);
 
       font-size: 25px;
+      text-align: center;
       color: getColor(LightTextActive);
       cursor: default;
 
-      @include onlyTablet {
+      @include tablet {
+        padding: 15px 10px;
         font-size: 20px;
+        
+        width: fit-content;
+        height: fit-content;
+        border: none;
       }
 
-      @include onlyMobile {
-        display: inline-block;
-        padding: 14px;
+      @include desktop {
+        padding: 15px 10px;
 
-        width: 100%;
-        height: 100%;
+        width: fit-content;
+        height: fit-content;
 
-        text-align: center;
-
-        border: 4px solid getColor(LightTextActive);
+        font-size: 25px;
+        border: none;
       }
 
       &::before {
-        content: "";
-        position: absolute;
+        display: none;
 
-        width: 100%;
-        height: 2px;
-        top: 49px;
-        left: 0;
-
-        background-color: getColor(LightTextActive);
-
-        @include onlyTablet {
+        @include tablet {
+          display: block;
+          content: "";
+          position: absolute;
+  
+          width: 100%;
+          height: 2px;
           top: 43px;
+          left: 0;
+  
+          background-color: getColor(LightTextActive);
         }
 
-        @include onlyMobile {
-          display: none;
+        @include desktop {
+          display: block;
+          content: "";
+          position: absolute;
+  
+          width: 100%;
+          height: 2px;
+          top: 49px;
+          left: 0;
+  
+          background-color: getColor(LightTextActive);
         }
       }
     }
