fix hover NavMenu

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,7 +1,7 @@
 $colors: (
   "LightTextDefault": #DBDCDE,
-  "LightTextHover": #ffd895,
-  "LightTextActive": #E59F2E,
+  "LightTextHover": #fCBA4C,
+  "LightTextActive": #FF4400,
   "BlackColorTop": #1F2428,
   "DarkBackground": #242323,
   "BlackColorBottom": #24292E,
