--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -10,11 +10,11 @@
   min-width: 375px;
 
   @include tablet {
-    padding: 15px 0;
+    padding: 0;
   }
 
   @include desktop {
-    padding: 15px 0;
+    padding: 0;
   }
 
   &__container.container {
