--- a/src/components/MissionsPage/MissionsPage.scss
+++ b/src/components/MissionsPage/MissionsPage.scss
@@ -4,68 +4,21 @@
 .missions-page {
   height: 100%;
 
-  padding: 10px 0;
+  padding: 20px 0;
 
   @include tablet {
-    padding: 15px 0;
+    padding: 40px 0;
   }
 
   @include desktop {
-    padding: 80px 0;
+    padding: 60px 0;
   }
 
   &__container.container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
-    height: 100%;
-  }
-
-  &__first-line {
-    font-size: 50px;
-    font-weight: 500;
-    text-align: center;
-    text-shadow: 2px 2px 10px rgba(#000000, 1.0);
-    cursor: default;
-
-    @include tablet {
-      font-size: 80px;
-    }
-
-    @include desktop {
-      font-size: 100px;
-    }
-  }
-
-  &__second-line {
-    font-size: 15px;
-    text-align: center;
-    text-shadow: 2px 2px 10px rgba(0, 0, 0, 1);
-    cursor: default;
-
-    @include tablet {
-      font-size: 15px;
-    }
-
-    @include desktop {
-      font-size: 25px;
-    }
-  }
-
-  &__thrid-line {
-    font-size: 25px;
-    font-weight: 500;
-    text-align: center;
-    text-shadow: 2px 2px 10px rgba(0, 0, 0, 1);
-    cursor: default;
-
-    @include tablet {
-      font-size: 35px;
-    }
-
-    @include desktop {
-      font-size: 55px;
-    }
+    gap: 20px;
   }
 }
